circleci commands mvn memory config