@@ -117,6 +117,13 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx3024m -XX:MaxPermSize=1024m -XX:PermSize=216m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
